kustomize/event-statistics/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"kafka.strimzi.io/v1beta2","kind":"Kafka","name":"fights-kafka"},{"apiVersion":"apps/v1","kind":"Deployment","name":"apicurio"},{"apiVersion":"opentelemetry.io/v1alpha1","kind":"OpenTelemetryCollector","name":"otel-collector"}]'
    app.openshift.io/vcs-ref: rhbq-3.2
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2023-02-24 - 13:05:45 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8085"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest-3.2.Final
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: java17-latest-3.2.Final
      app.kubernetes.io/name: event-statistics
      app.kubernetes.io/part-of: event-stats
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: rhbq-3.2
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/build-timestamp: 2023-02-24 - 13:05:45 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8085"
        prometheus.io/scheme: http
      labels:
        app: event-statistics
        application: event-stats
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: java17-latest-3.2.Final
        app.kubernetes.io/name: event-statistics
        app.kubernetes.io/part-of: event-stats
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/quarkus-super-heroes/event-statistics:java17-latest-3.2.Final
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: event-statistics
          ports:
            - containerPort: 8085
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
