kustomize/event-statistics/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: "fights-kafka,apicurio"
    app.openshift.io/vcs-ref: rhbq-2.7
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2022-08-17 - 15:34:08 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8085"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest-rhbq-2.7
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8085
  selector:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest-rhbq-2.7
  type: ClusterIP
