kustomize/event-statistics/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: rhbq-3.2
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2023-02-24 - 13:05:45 +0000
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest-3.2.Final
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  port:
    targetPort: 8085
  to:
    kind: Service
    name: event-statistics
  tls:
    termination: edge
  wildcardPolicy: None
